--- a/T09ANIM/T09ANIM.vcproj
+++ b/T09ANIM/T09ANIM.vcproj
@@ -240,6 +240,18 @@
 						RelativePath=".\ANIM\RND\RNDPRIM.C"
 						>
 					</File>
+					<Filter
+						Name="RES"
+						>
+						<File
+							RelativePath=".\ANIM\RND\RES\RNDMTL.C"
+							>
+						</File>
+						<File
+							RelativePath=".\ANIM\RND\RES\RNDSHD.C"
+							>
+						</File>
+					</Filter>
 				</Filter>
 			</Filter>
 			<Filter
